// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alert > renders alert without icon 1`] = `
<body>
  <div>
    <div
      class="relative w-full p-4 text-sm rounded-[8px] [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:stroke-foreground [&>svg~*]:pl-7 bg-white border border-[#E0E0E0] text-foreground"
      role="alert"
    >
      <h5
        class="text-base not-italic font-medium"
      >
        Atenção!
      </h5>
      <div
        class="text-base font-normal not-italic text-[#616161]"
      >
        Houve um problema com o seu cartão de crédito. Por favor, tente novamente mais tarde.
      </div>
    </div>
  </div>
</body>
`;

exports[`Alert > renders alert without title 1`] = `
<body>
  <div>
    <div
      class="relative w-full p-4 text-sm rounded-[8px] [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:stroke-foreground [&>svg~*]:pl-7 bg-white border border-[#E0E0E0] text-foreground"
      role="alert"
    >
      <svg
        class="lucide lucide-component h-4 w-4"
        data-testid="icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.5 8.5 9 12l-3.5 3.5L2 12l3.5-3.5Z"
        />
        <path
          d="m12 2 3.5 3.5L12 9 8.5 5.5 12 2Z"
        />
        <path
          d="M18.5 8.5 22 12l-3.5 3.5L15 12l3.5-3.5Z"
        />
        <path
          d="m12 15 3.5 3.5L12 22l-3.5-3.5L12 15Z"
        />
      </svg>
      <div
        class="text-base font-normal not-italic text-[#616161]"
      >
        Houve um problema com o seu cartão de crédito. Por favor, tente novamente mais tarde.
      </div>
    </div>
  </div>
</body>
`;

exports[`Alert > renders default alert 1`] = `
<body>
  <div>
    <div
      class="relative w-full p-4 text-sm rounded-[8px] [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:stroke-foreground [&>svg~*]:pl-7 bg-white border border-[#E0E0E0] text-foreground"
      role="alert"
    >
      <svg
        class="lucide lucide-component h-4 w-4"
        data-testid="icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.5 8.5 9 12l-3.5 3.5L2 12l3.5-3.5Z"
        />
        <path
          d="m12 2 3.5 3.5L12 9 8.5 5.5 12 2Z"
        />
        <path
          d="M18.5 8.5 22 12l-3.5 3.5L15 12l3.5-3.5Z"
        />
        <path
          d="m12 15 3.5 3.5L12 22l-3.5-3.5L12 15Z"
        />
      </svg>
      <h5
        class="text-base not-italic font-medium"
      >
        Atenção!
      </h5>
      <div
        class="text-base font-normal not-italic text-[#616161]"
      >
        Houve um problema com o seu cartão de crédito. Por favor, tente novamente mais tarde.
      </div>
    </div>
  </div>
</body>
`;

exports[`Alert > renders destructive alert 1`] = `
<body>
  <div>
    <div
      class="relative w-full p-4 text-sm rounded-[8px] [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg~*]:pl-7 bg-background border text-destructive border-destructive [&>svg]:stroke-destructive *:text-destructive"
      role="alert"
    >
      <svg
        class="lucide lucide-component h-4 w-4"
        data-testid="icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.5 8.5 9 12l-3.5 3.5L2 12l3.5-3.5Z"
        />
        <path
          d="m12 2 3.5 3.5L12 9 8.5 5.5 12 2Z"
        />
        <path
          d="M18.5 8.5 22 12l-3.5 3.5L15 12l3.5-3.5Z"
        />
        <path
          d="m12 15 3.5 3.5L12 22l-3.5-3.5L12 15Z"
        />
      </svg>
      <h5
        class="text-base not-italic font-medium"
      >
        Atenção!
      </h5>
      <div
        class="text-base font-normal not-italic text-[#616161]"
      >
        Houve um problema com o seu cartão de crédito. Por favor, tente novamente mais tarde.
      </div>
    </div>
  </div>
</body>
`;
